--- a/OrderService/src/main/resources/application.yaml
+++ b/OrderService/src/main/resources/application.yaml
@@ -1,1 +1,13 @@
-spring.application.name=OrderService
+server:
+  port: 8081
+  servlet:
+    context-path: /order_service
+
+
+spring:
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/FoodApp
+      username: root
+      password: root
+      authentication-database: admin
