--- a/OrderService/pom.xml
+++ b/OrderService/pom.xml
@@ -74,6 +74,12 @@
 			<artifactId>lombok-mapstruct-binding</artifactId>
 			<version>0.2.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
