--- a/OrderService/src/main/resources/application.yaml
+++ b/OrderService/src/main/resources/application.yaml
@@ -8,3 +8,6 @@ spring:
   data:
     mongodb:
       uri: mongodb://root:root@localhost:27017/FoodApp?authSource=admin
+
+key:
+  value: this-is-a-very-long-secret-key-32-characters
