--- a/OtherService/pom.xml
+++ b/OtherService/pom.xml
@@ -85,6 +85,12 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<dependencyManagement>
