--- a/AccountService/src/main/resources/application.yaml
+++ b/AccountService/src/main/resources/application.yaml
@@ -12,10 +12,17 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  redis:
+    host: localhost
+    port: 6379
 
 key:
-  value: this-is-a-very-long-secret-key-32-characters
+  value:
 
 app:
   services:
     cart: http://localhost:8081/order_service/cart
+    notification: http://localhost:8083/notification_service
+
+  time:
+    otp: 1
