--- a/ApiGateway/src/main/resources/application.yaml
+++ b/ApiGateway/src/main/resources/application.yaml
@@ -23,3 +23,10 @@ spring:
             - Path=${app.api-prefix}/order_service/**
           filters:
             - StripPrefix=2
+
+        - id: other_service
+          uri: http://localhost:8082
+          predicates:
+            - Path=${app.api-prefix}/other_service/**
+          filters:
+            - StripPrefix=2
