--- a/OrderService/src/main/resources/application.yaml
+++ b/OrderService/src/main/resources/application.yaml
@@ -14,4 +14,7 @@ app:
     account: http://localhost:8080/account_service
 
 key:
-  value: this-is-a-very-long-secret-key-32-characters
+  jwt:
+
+
+
