--- a/AccountService/src/main/resources/application.yml
+++ b/AccountService/src/main/resources/application.yml
@@ -3,21 +3,21 @@ server:
   servlet:
     context-path: /account_service
 
+
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/FoodApp
-    username: root
-    password: root
+    url: ${MYSQL_URL:jdbc:mysql://root:root@localhost:3306/FoodApp}
     driver-class-name: com.mysql.cj.jdbc.Driver
+  data:
+    redis:
+      url: ${REDIS_URL:redis://localhost:6379}
   jpa:
     hibernate:
       ddl-auto: update
-  redis:
-    host: localhost
-    port: 6379
+
 
 key:
-  value:
+  value: ${KEY_JWT}
 
 app:
   services:
@@ -26,3 +26,4 @@ app:
 
   time:
     otp: 1
+
