--- a/OrderService/src/main/resources/application.yml
+++ b/OrderService/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
 
 app:
   service:
-    account: http://localhost:8080/account_service
+    account: ${ACCOUNT_URL:http://localhost:8080}/account_service
 
 key:
   jwt: ${KEY_JWT}
