--- a/ApiGateway/src/main/resources/application.yaml
+++ b/ApiGateway/src/main/resources/application.yaml
@@ -11,22 +11,22 @@ spring:
     gateway:
       routes:
         - id: account_service
-          uri: http://localhost:8080
+          uri: ${ACCOUNT_URL:http://localhost:8080}
           predicates:
             - Path=${app.api-prefix}/account_service/**
           filters:
             - StripPrefix=2
 
         - id: order_service
-          uri: http://localhost:8081
+          uri: ${CART_URL:http://localhost:8081}
           predicates:
             - Path=${app.api-prefix}/order_service/**
           filters:
             - StripPrefix=2
 
-        - id: other_service
-          uri: http://localhost:8082
+        - id: notification_service
+          uri: ${NOTIFICATION_URL:http://localhost:8083}
           predicates:
-            - Path=${app.api-prefix}/other_service/**
+            - Path=${app.api-prefix}/notification_service/**
           filters:
             - StripPrefix=2
