Update Dockerfile microOrderService

--- a/OrderService/Dockerfile
+++ b/OrderService/Dockerfile
@@ -14,6 +14,11 @@ RUN mvn package -DskipTests
 # Start with Amazon Correto JDK 21
 FROM amazoncorretto:21.0.4
 
+# ✅ Thêm chứng chỉ CA của MongoDB Atlas
+RUN curl -o /tmp/mongodb.pem https://www.mongodb.com/rootCA.pem && \
+    keytool -import -trustcacerts -keystore $JAVA_HOME/lib/security/cacerts \
+    -storepass changeit -noprompt -alias mongodbCA -file /tmp/mongodb.pem
+
 # Set working folder to App and copy complied file from above step
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
