--- a/OrderService/Dockerfile
+++ b/OrderService/Dockerfile
@@ -14,7 +14,7 @@ RUN mvn package -DskipTests
 # Start with Amazon Correto JDK 21
 FROM amazoncorretto:21.0.4
 
-# ✅ Thêm chứng chỉ CA của MongoDB Atlas
+# Thêm chứng chỉ CA của MongoDB Atlas
 RUN curl -o /tmp/mongodb.pem https://www.mongodb.com/docs/drivers/certificates/mongodb.pem && \
     keytool -importcert -trustcacerts -cacerts \
     -storepass changeit -noprompt -alias mongodbCA -file /tmp/mongodb.pem
