--- a/OrderService/Dockerfile
+++ b/OrderService/Dockerfile
@@ -14,6 +14,17 @@ RUN mvn package -DskipTests
 # Start with Amazon Correto JDK 21
 FROM amazoncorretto:21.0.4
 
+# Copy chứng chỉ vào container
+COPY atlas-root-ca.pem /tmp/atlas-root-ca.pem
+
+# Import vào truststore
+RUN keytool -importcert \
+    -alias atlas-root-ca \
+    -file /tmp/atlas-root-ca.pem \
+    -keystore $JAVA_HOME/lib/security/cacerts \
+    -storepass changeit \
+    -noprompt
+
 # Set working folder to App and copy complied file from above step
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
