--- a/OrderService/Dockerfile
+++ b/OrderService/Dockerfile
@@ -1,6 +1,6 @@
 # Stage 1: build
-# Start with a Maven image that includes JDK 21
-FROM maven:3.9-ibm-semeru-17-focal AS build
+# Start with a Maven image that includes JDK 17
+FROM maven:3.9.8-amazoncorretto-17 AS build
 
 # Copy source code and pom.xml file to /app folder
 WORKDIR /app
@@ -11,8 +11,7 @@ COPY src ./src
 RUN mvn package -DskipTests
 
 #Stage 2: create image
-# Start with Amazon Correto JDK 21
-FROM ibm-semeru-runtimes:open-17-ibm-focal
+FROM amazoncorretto:17.0.15
 
 # Set working folder to App and copy complied file from above step
 WORKDIR /app
