--- a/OrderService/Dockerfile
+++ b/OrderService/Dockerfile
@@ -1,6 +1,6 @@
 # Stage 1: build
-# Start with a Maven image that includes JDK 17
-FROM maven:3.9.8-amazoncorretto-17 AS build
+# Start with a Maven image that includes JDK 21
+FROM maven:3.9.8-amazoncorretto-21 AS build
 
 # Copy source code and pom.xml file to /app folder
 WORKDIR /app
@@ -11,7 +11,9 @@ COPY src ./src
 RUN mvn package -DskipTests
 
 #Stage 2: create image
-FROM amazoncorretto:17.0.15
+# Start with Amazon Correto JDK 21
+FROM amazoncorretto:21.0.4
+
 # Set working folder to App and copy complied file from above step
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
