--- a/OrderService/src/main/resources/application.yml
+++ b/OrderService/src/main/resources/application.yml
@@ -7,7 +7,7 @@ server:
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://letan:root@cluster0.6tbmrfq.mongodb.net/FoodApp?retryWrites=true&w=majority&appName=Cluster0&ssl=true
+      uri: mongodb+srv://letan:root@cluster0.6tbmrfq.mongodb.net/FoodApp?retryWrites=true&w=majority&appName=Cluster0
 
 app:
   service:
